--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,6 @@
-[aliases]
-test=pytest
-
 [tox]
-envlist =
-    py35
-    py36
-    flake8
+envlist = py35,py36,pypy3
 
-
+[testenv]
+deps = pytest
+commands = pytest tests.py {posargs}
